--- a/discuss/package.json
+++ b/discuss/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "2.2.9",
+    "@prisma/client": "^5.19.1",
     "discuss": "file:",
     "framer-motion": "11.5.4",
     "next": "14.2.12",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18"
   },
