--- a/discuss/package.json
+++ b/discuss/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "0.18.1",
+    "@auth/prisma-adapter": "1.0.6",
     "@nextui-org/react": "2.2.9",
     "@prisma/client": "^5.19.1",
     "discuss": "file:",
     "framer-motion": "11.5.4",
     "next": "14.2.12",
+    "next-auth": "5.0.0-beta.3",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18"
