--- a/discuss/package.json
+++ b/discuss/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@auth/core": "0.18.1",
     "@auth/prisma-adapter": "1.0.6",
-    "@nextui-org/react": "2.2.9",
-    "@prisma/client": "^5.19.1",
+    "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.5.2",
     "discuss": "file:",
-    "framer-motion": "11.5.4",
-    "next": "14.2.12",
+    "framer-motion": "^10.16.4",
+    "next": "14.0.2",
     "next-auth": "5.0.0-beta.3",
-    "prisma": "^5.19.1",
+    "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,10 +25,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.12",
+    "eslint-config-next": "14.0.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
